--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,12 @@ jobs:
              -e QA.postman_environment.json \
              -d testData.csv \
              -r cli,htmlextra
+
+      - name: Newman Report
+        uses: actions/upload-artifact@v6.0.0
+        with:
+          name: Newman Reports
+          path: newman/*.html
         
   
   
