--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,15 @@ jobs:
         with:
           name: Newman Reports
           path: newman/*.html
+
+      - name: Adding github page
+        if: always()
+        uses: peaceiris/actions-gh-pages@v4.0.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: newman/
+          
+        
         
   
   
