--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,7 @@ jobs:
       - name: Run the postman collection with newman
         run: |
              newman run 'Inwarranty-flow Collection Copy.postman_collection.json' \
-             -e QA.postman_environment.json \
-             -d testData.csv \
+             -e QA.postman_environment.json
              -r cli,htmlextra
 
       - name: Newman Report
